Fix Spacing

--- a/css/app.css
+++ b/css/app.css
@@ -195,7 +195,7 @@ ul.company-list li a:hover {
 }
 
 .map-container .map-row {
-	margin-top: 10px;
+	margin-top: 3px;
 }
 
 .map-container .booth {
